# aether

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.claude/hooks/: aether-metrics.py
.claude/skills/aether/: SKILL.md
.github/workflows/: release.yml
src/: app.rs  engine.rs  event.rs  main.rs  provider.rs  theme.rs
src/live/: event.rs  mod.rs
src/mock/: mod.rs  scenarios.rs
src/model/: agent.rs  attribution.rs  message.rs  mod.rs  pricing.json  task.rs  usage.rs
src/ui/: chat_view.rs  graph_view.rs  mod.rs
