[package]
name = "aether"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Live observability for coding agents"
repository = "https://github.com/connectchiragg/aether"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
